# Everything-SDK

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: Everything.h
src/: Everything.c  Everything.def  everything_ipc.h
test/: main.c
